Add dynamic sidebar with dummy data

--- a/eshop/pom.xml
+++ b/eshop/pom.xml
@@ -43,6 +43,13 @@
 			<artifactId>jstl</artifactId>
 			<version>1.2</version>
 		</dependency>
+
+		<!-- Link Backend Project -->
+		<dependency>
+			<groupId>com.rajneesh</groupId>
+			<artifactId>eshopbackend</artifactId>
+			<version>0.0.1-SNAPSHOT</version>
+		</dependency>
 	</dependencies>
 	<build>
 		<plugins>
