--- a/eshopbackend/pom.xml
+++ b/eshopbackend/pom.xml
@@ -15,6 +15,7 @@
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<spring.version>5.2.6.RELEASE</spring.version>
 		<hibernate.version>5.2.7.Final</hibernate.version>
+		<jackson.version>2.9.4</jackson.version>
 	</properties>
 
 	<dependencies>
@@ -59,6 +60,18 @@
 			<version>2.1.1</version>
 		</dependency>
 
+		<!-- Jackson to convert Java object to Json -->
+		<dependency>
+			<groupId>com.fasterxml.jackson.core</groupId>
+			<artifactId>jackson-databind</artifactId>
+			<version>${jackson.version}</version>
+		</dependency>
+
+		<dependency>
+			<groupId>com.fasterxml.jackson.core</groupId>
+			<artifactId>jackson-annotations</artifactId>
+			<version>${jackson.version}</version>
+		</dependency>
 	</dependencies>
 
 	<build>
